<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="Home Page" />
    </group>
    <item android:title="Routes">
        <menu>
            <item
                android:id="@+id/nav_recommended"
                android:icon="@android:drawable/ic_menu_compass"
                android:title="Show recommended routes" />
            <item
                android:id="@+id/nav_customized"
                android:icon="@android:drawable/ic_menu_compass"
                android:title="Let me customize my Own" />
        </menu>
    </item>



</menu>
